--- a/core/src/table/table.module.css
+++ b/core/src/table/table.module.css
@@ -72,5 +72,5 @@
 }
 
 .container th:first-child {
-	z-index: calc(var(--z-th) + 1);
+	z-index: var(--z-th-first-child);
 }
